single-spa-workshop > 01-code-exercise done

--- a/single-spa-workshop/01-code-exercise/index.html
+++ b/single-spa-workshop/01-code-exercise/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ex 01. Vanilla App</title>
+  <script src="https://cdn.jsdelivr.net/npm/regenerator-runtime@0.13.7/runtime.min.js"></script>
 </head>
 
 <body>
