--- a/single-spa-workshop/02-vue-exercise/index.html
+++ b/single-spa-workshop/02-vue-exercise/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue App</title>
-  </head>
-  <body>
-    <div id="single-spa-application:vue-app"></div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vue App</title>
+  <script src="https://cdn.jsdelivr.net/npm/regenerator-runtime@0.13.7/runtime.min.js"></script>
+</head>
+
+<body>
+  <div id="single-spa-application:vue-app"></div>
+</body>
+
 </html>
